refactor: improve github plugin resolver